# pipyexample

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
.jfrog/: frogbot-config.yml
poetryNewProj/: package-lock.json  pyproject.toml
