[project]
name = "poetrynewproj"
version = "0.1.0"
description = ""
authors = [
    {name = "Amit Levi", email = "amitl@jfrog.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mv_build",        # Using the latest version of mv_build
    "requests>=2.22.0,<3.0.0",  # Adding Requests
    "Flask>=2.0.0,<3.0.0"       # Adding Flask
]

[tool.poetry]
packages = [{include = "poetrynewproj", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
