[project]
name = "my-python-project"
version = "0.1.0"
description = "A simple Python project."
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
license = "MIT"
requires-python = ">=3.7,<4.0"

[tool.poetry]
packages = [{ include = "my_python_project", from = "src" }]  # Specify the package name and source

[tool.poetry.dependencies]
requests = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
